# Bot_Rise_Kingdoms

./: main.py  pyproject.toml  task_detector.py  tasks_executor.py  test.py
