[project]
name = "bot-rise-kingdoms"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Lushnikov"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
